--- a/UDTAndroid/res/layout/trackticket.xml
+++ b/UDTAndroid/res/layout/trackticket.xml
@@ -64,8 +64,8 @@
         android:id="@+id/mapview"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:apiKey="0zfRPHma80H4yaEhpKl_-48MBkQxMzVJOoFGk_A" 
-        android:layout_weight="1">
+        android:apiKey="0zfRPHma80H6teC_7b-L0-uurb8BebYH6TJtr7Q" 
+        android:layout_weight="1" android:clickable="true">
     </com.google.android.maps.MapView>
 
 
