--- a/UDTAndroid/res/layout/balloon_overlay.xml
+++ b/UDTAndroid/res/layout/balloon_overlay.xml
@@ -34,7 +34,7 @@
 			android:layout_width="fill_parent" 
 			android:id="@+id/balloon_item_snippet"
 			android:text="balloon_item_snippet" 
-			android:textSize="12dip"></TextView>
+			android:textSize="12dip" android:visibility="gone"></TextView>
 	</LinearLayout>
 	
 	<ImageView android:layout_width="wrap_content"
