--- a/UDTAndroid/res/layout/trackticket.xml
+++ b/UDTAndroid/res/layout/trackticket.xml
@@ -42,22 +42,32 @@
             android:textSize="20dip"
             android:textStyle="bold"
             android:typeface="sans" />
-
+
         <EditText
-            android:id="@+id/editText1"
+            android:id="@+id/ticketid"
             android:layout_width="210px"
             android:layout_height="fill_parent"
-            android:background="@drawable/backgroud_input" android:inputType="number" android:padding="5px" android:textColor="#000000" android:typeface="sans" android:textStyle="bold" android:textSize="15dip">
+            android:background="@drawable/backgroud_input"
+            android:inputType="number"
+            android:padding="5px"
+            android:textColor="#000000"
+            android:textSize="15dip"
+            android:textStyle="bold"
+            android:typeface="sans" >
 
             <requestFocus />
         </EditText>
-
-
+
         <Button
-            android:id="@+id/button1"
+            android:id="@+id/trackbutton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/trackbutton" android:textStyle="bold" android:textColor="#ffffff" android:typeface="sans" android:background="@drawable/button_gris" android:padding="10px"/>
+            android:background="@drawable/button_gris"
+            android:padding="10px"
+            android:text="@string/trackbutton"
+            android:textColor="#ffffff"
+            android:textStyle="bold"
+            android:typeface="sans" />
 
     </LinearLayout>
     <com.google.android.maps.MapView
