--- a/UDTAndroid/res/layout/home.xml
+++ b/UDTAndroid/res/layout/home.xml
@@ -72,16 +72,17 @@
         android:typeface="sans" />
 
     <Button
-        android:id="@+id/Button01"
+        android:id="@+id/configbutton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="10px"
         android:background="@drawable/boton"
         android:padding="5px"
         android:text="@string/config"
         android:textColor="#ffffff"
         android:textSize="15dp"
         android:textStyle="bold"
-        android:typeface="sans" android:layout_marginBottom="10px"/>
+        android:typeface="sans" />
 
 </LinearLayout>
 
