--- a/UDTAndroid/res/layout/dondeestoy.xml
+++ b/UDTAndroid/res/layout/dondeestoy.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical">
+    android:orientation="vertical" android:scrollbars="none">
 
     <LinearLayout
     android:id="@+id/LinearLayout01"
@@ -30,6 +30,31 @@
         android:layout_height="fill_parent"
         android:layout_weight="0"
         android:orientation="vertical" >
+
+        <HorizontalScrollView
+            android:id="@+id/horizontalScrollView1"
+            android:layout_width="wrap_content"
+            android:layout_height="48dp"
+            android:background="@drawable/backgroud_puntos" android:scrollbars="none">
+
+            <LinearLayout
+                android:id="@+id/linearLayout4"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/address"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="#fff"
+                    android:textSize="20dp"
+                    android:textStyle="bold"
+                    android:typeface="sans" android:gravity="center"/>
+
+            </LinearLayout>
+        </HorizontalScrollView>
 
         <com.google.android.maps.MapView
             android:id="@+id/mapview"
