--- a/UDTWeb/css/anoceanofsky.css
+++ b/UDTWeb/css/anoceanofsky.css
@@ -152,7 +152,8 @@ text-align:center;
 font-size:9px;
 font-family:Arial, Helvetica, sans-serif;
 color:#386172;
-padding-top:5px;
+margin-top:30px;
+clear: both;
 }
 
 #footer a
