--- a/UDTWeb/css/form.css
+++ b/UDTWeb/css/form.css
@@ -12,6 +12,7 @@
 
 form {
 	width: 335px;
+	padding: 50px;
 }
 
 .col1 {
@@ -61,7 +62,7 @@ div.row {
 	height: 29px;
 	width: 330px;
 	background: url(../images/bg_submit.gif) no-repeat;
-	padding-top: 5px;
+	padding-top: 2px;
 	clear: both;
 } 
 
