--- a/UDTWeb/css/anoceanofsky.css
+++ b/UDTWeb/css/anoceanofsky.css
@@ -16,7 +16,10 @@ body {
 {
   margin: 0 auto 0 auto;
  text-align:center;}
-
+a{
+	text-decoration: none;
+	color:wheat;
+}
 #page
 {
   display: block; 
@@ -24,6 +27,17 @@ body {
   position: relative; 
   overflow: hidden; 
   width: 790px;
+}
+
+#mapBox {
+	width:600px;
+	height:510px;
+	display:none;
+	*margin-left:-9999px;
+	*height:0px;
+	*position:relative;
+	*top:-500px;
+	*display:block
 }
 
 .topNaviagationLink
